# SLIC-Segmentation

./: .gitignore  CMakeLists.txt  SLIC_Segmentation_Sequential.cpp  SLIC_Segmentation_Sequential_AoS.cpp  SLIC_Segmentation_Sequential_SoA.cpp
include/: SLIC_common.h
src/: SLIC_Segmentation_Sequential_AoS.cpp  SLIC_Segmentation_Sequential_SoA.cpp  SLIC_common.cpp
